--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,17 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="34" height="34" fill="white"><title>dots-horizontal</title><path d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z" /></svg>
         </div>
     </header>
+    <main>
+        <div class="main-content">
+            <div class="main-video">
+                <video src="/videos/homepage-video.mp4" width="430" height="388" autoplay playsinline loop muted x-webkit-airplay="deny" title="Animation showing different users’ Memojis surrounded by the icons of the apps the user personally uses most"></video>
+            </div>
+            <h1 class="main-app-name">CloudKeep</h1>
+            <a href="/sign-in">
+                <div class="main-sign-in-btn">Sign In</div>
+            </a>
+            <h2 class="main-description">The best place for all your photos, files, notes and more.</h2>
+        </div>
+    </main>
 </body>
 </html> 
