Wrap the home btn inside an anchor element.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header>
-        <div class="home-btn">
-            <div class="app-logo">
-                <img src="images/cloudkeep-logo-landscape.png" alt="CloudKeep logo" height="40">
+        <a href="/">
+            <div class="home-btn">
+                <div class="app-logo">
+                    <img src="images/cloudkeep-logo-landscape.png" alt="CloudKeep logo" height="40">
+                </div>
+                <div class="app-name">CloudKeep</div>
             </div>
-            <div class="app-name">CloudKeep</div>
-        </div>
+        </a>
         <div class="options-btn">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="34" height="34" fill="white"><title>dots-horizontal</title><path d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z" /></svg>
         </div>
