Add name attribute for each input element.

--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -26,12 +26,12 @@
             <div class="app-logo-container"><img src="/images/cloudkeep-logo-square.png" alt="CloudKeep logo" height="160"></div>
             <h1 class="sign-in-heading">Sign in with CloudKeep Account</h1>
             <div class="inputs">
-                <input type="email" class="email" placeholder="Email" minlength="8" maxlength="50" tabindex="1" required>
-                <input type="password" class="password" placeholder="password" minlength="6" maxlength="50" tabindex="1" required>
+                <input type="email" name="email" class="email" placeholder="Email" minlength="8" maxlength="50" tabindex="1" required>
+                <input type="password" name="password" class="password" placeholder="password" minlength="6" maxlength="50" tabindex="1" required>
             </div>
             <button type="submit" class="submit-btn" tabindex="1">Sign In</button>
             <div class="keep-me-signed-in-container">
-                <input type="checkbox" id="keep-me-signed-in" tabindex="1"></input>
+                <input type="checkbox" name="keep-me-signed-in" id="keep-me-signed-in" tabindex="1"></input>
                 <label for="keep-me-signed-in">Keep me signed in</label>
             </div>
             <a href="/sign-up" class="sign-up-btn" tabindex="1">Create CloudKeep Account</a>
