Wrap Cancel button inside an anchor & edit opening message.

--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -27,7 +27,7 @@
                 <img src="/images/cloudkeep-logo-landscape.png" alt="CloudKeep logo" height="36">
             </div>
             <h2 class="sign-up-heading">Create Your CloudKeep Account</h2>
-            <p>One Apple Account is all you need to access all Apple services.<br>Already have an Apple Account? <a href="/sign-in">Sign In</a></p>
+            <p>One CloudKeep Account is all you need to access all services.<br>Already have a CloudKeep Account? <a href="/sign-in">Sign In</a></p>
             <div class="name-container">
                 <input type="text" class="first-name" name="firstName" placeholder="First name" maxlength="20" required>
                 <input type="text" class="last-name" name="lastName" placeholder="Last name" maxlength="20" required>
@@ -99,7 +99,9 @@
 
             <p class="final-disclaimer">Your CloudKeep Account information is used to allow you to sign in securely and access your data. CloudKeep records certain data for security, support and reporting purposes. If you agree, CloudKeep may also use your CloudKeep Account information to send you marketing emails and communications, including based on your use of CloudKeep services.</p>
             <div class="buttons-container">
-                <button>Cancel</button>
+                <a href="/sign-in">
+                    <button type="button">Cancel</button>
+                </a>
                 <button type="submit">Continue</button>
             </div>
         </form>
