Add min & max length for email.

--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -68,7 +68,7 @@
                 </select>
             </div>
             <hr>
-            <input type="email" name="email" placeholder="name@example.com" required>
+            <input type="email" name="email" placeholder="name@example.com" minlength="8" maxlength="50" required>
             <p>This will be your new CloudKeep Account. </p>
             <input type="password" name="password" minlength="8" maxlength="40" placeholder="Password" required></input>
             <input type="password" name="confirmPassword" minlength="8" maxlength="40" placeholder="Confirm Password" required></input>
