--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -88,3 +88,22 @@ main {
     font-size: 40px;
     font-weight: 500;
 }
+
+/* the styles below apply if user is logged in  */
+
+.header-logged {
+    background-color: #323236;
+}
+
+.header-icons-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 184px;
+}
+
+.header-icons-container svg {
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+}
