--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -91,8 +91,20 @@ main {
 
 /* the styles below apply if user is logged in  */
 
+body {
+    /* border: 1px solid red; */
+
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 10fr;
+    grid-template-rows: 1fr 20fr;
+}
+
 .header-logged {
+    /* border: 1px solid blue; */
+
     background-color: #323236;
+    grid-area: 1 / 1 / 2 / 3;
 }
 
 .header-icons-container {
@@ -106,4 +118,46 @@ main {
     width: 22px;
     height: 22px;
     cursor: pointer;
+}
+
+nav {
+    border-right: 1px solid black;
+    background-color: #202023;
+    grid-area: 2 / 1 / 3 / 2;
+    width: 250px;
+    padding: 52px 10px 0px;
+}
+
+li {
+    border-radius: 10px;
+    list-style-type: none;
+    height: 32px;
+    padding-left: 14px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+li a {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+li:hover {
+    background-color: #343436;
+}
+
+main {
+    /* border: 1px solid white; */
+
+    background-color: #1b1b1d;
+    grid-area: 2 / 2 / span 1 / span 1;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
 }
