--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -91,7 +91,7 @@ main {
 
 /* the styles below apply if user is logged in  */
 
-body {
+.body-logged {
     /* border: 1px solid red; */
 
     height: 100vh;
@@ -151,7 +151,7 @@ li:hover {
     background-color: #343436;
 }
 
-main {
+.main-logged {
     /* border: 1px solid white; */
 
     background-color: #1b1b1d;
