--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -250,17 +250,33 @@ ul h4 {
 }
 
 .main-title-container {
-    border: 1px solid deeppink;
-
-    height: 34px;
+    height: 62px;
+    margin-top: 10px;
+    padding: 5px 10px;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-title-container svg {
     fill: #b3b3b4;
 }
 
+.main-title {
+    height: 34px;
+    display: flex;
+    align-items: center;
+}
+
+.items-counter-container {
+    height: 17px;
+    font-size: 14px;
+    color: #FFFFFFA8;
+    padding-left: 9px;
+}
+
 .main-content-logged {
-    border: 1px solid greenyellow;
+    border: 1px solid white;
 
     width: 100%;
     height: 100%;
