Design the table needed to display files & folders inside main.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,40 @@
                     </div>
                 </div>
                 <div class="main-content-logged">
-                    here's the main content
+                    <table>
+                        <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Kind</th>
+                                <th scope="col">Size</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Shared</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td scope="row">Descarcari</td>
+                                <td>Folder</td>
+                                <td>1.43 GB</td>
+                                <td>23/2/2025, 11:34</td>
+                                <td>yes</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Descarcari</td>
+                                <td>Folder</td>
+                                <td>1.43 GB</td>
+                                <td>23/2/2025, 11:34</td>
+                                <td>yes</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Descarcari</td>
+                                <td>Folder</td>
+                                <td>1.43 GB</td>
+                                <td>23/2/2025, 11:34</td>
+                                <td>yes</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </main>
         </body>
