--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -276,11 +276,42 @@ ul h4 {
 }
 
 .main-content-logged {
-    border: 1px solid white;
-
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+table {
+    width: 100%;
+    margin-bottom: auto;
+    border-collapse: collapse; /* so the bottom border is visible for every tr, if it's not the last */
+}
+
+thead {
+    /* border: 2px solid blue; */
+
+    height: 44px;
+}
+
+tbody tr {
+    height: 41px;
+    border-bottom: 1px solid #343436;
+}
+
+tbody tr:last-child {
+    border-bottom: none;
+}
+
+th {
+    border-bottom: 1px solid #343436;
+    text-align: left;
+    font-size: 14px;
+    font-weight: 300;
+    color: #FFFFFF80;
+}
+
+td, th {
+    padding: 0 70px;
 }
