--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,21 +112,30 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td scope="row">Descarcari</td>
+                                <td scope="row">
+                                    <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
+                                    <span>Descarcari</span>
+                                </td>
                                 <td>Folder</td>
                                 <td>1.43 GB</td>
                                 <td>23/2/2025, 11:34</td>
                                 <td>yes</td>
                             </tr>
                             <tr>
-                                <td scope="row">Descarcari</td>
+                                <td scope="row">
+                                    <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
+                                    <span>Descarcari</span>
+                                </td>
                                 <td>Folder</td>
                                 <td>1.43 GB</td>
                                 <td>23/2/2025, 11:34</td>
                                 <td>yes</td>
                             </tr>
                             <tr>
-                                <td scope="row">Descarcari</td>
+                                <td scope="row">
+                                    <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
+                                    <span>Descarcari</span>
+                                </td>
                                 <td>Folder</td>
                                 <td>1.43 GB</td>
                                 <td>23/2/2025, 11:34</td>
