Wrap svg & span from inside the td into an a element.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -113,33 +113,20 @@
                         <tbody>
                             <tr>
                                 <td scope="row">
-                                    <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
-                                    <span>Descarcari</span>
+                                    <a href="/placeholder-link">
+                                        <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
+                                        <span>Descarcari</span>
+                                    </a>
                                 </td>
                                 <td>Folder</td>
                                 <td>1.43 GB</td>
                                 <td>23/2/2025, 11:34</td>
-                                <td>yes</td>
-                            </tr>
-                            <tr>
-                                <td scope="row">
-                                    <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
-                                    <span>Descarcari</span>
+                                <td>
+                                    <div class="shared-and-options">
+                                        <span>yes</span>
+                                        <svg class="file-options" width="26" height="26" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="#636366" d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,10.5A1.5,1.5 0 0,0 10.5,12A1.5,1.5 0 0,0 12,13.5A1.5,1.5 0 0,0 13.5,12A1.5,1.5 0 0,0 12,10.5M6.5,10.5A1.5,1.5 0 0,0 5,12A1.5,1.5 0 0,0 6.5,13.5A1.5,1.5 0 0,0 8,12A1.5,1.5 0 0,0 6.5,10.5M17.5,10.5A1.5,1.5 0 0,0 16,12A1.5,1.5 0 0,0 17.5,13.5A1.5,1.5 0 0,0 19,12A1.5,1.5 0 0,0 17.5,10.5Z" /></svg>
+                                    </div>
                                 </td>
-                                <td>Folder</td>
-                                <td>1.43 GB</td>
-                                <td>23/2/2025, 11:34</td>
-                                <td>yes</td>
-                            </tr>
-                            <tr>
-                                <td scope="row">
-                                    <svg width="22" height="14.5" viewBox="0 0 27 18.66" xmlns="http://www.w3.org/2000/svg"><path fill="#64d2ff" d="M0 5.597h22v-.748C22 2.823 20.973 1.8 18.958 1.8h-9.3c-.658 0-1.056-.157-1.54-.58l-.59-.492C6.887.177 6.393 0 5.434 0h-2.76C.978 0 0 .984 0 2.96v2.637zm0 9.354C0 16.987 1.017 18 3.042 18h16.207C20.983 18 22 16.977 22 14.95V6.886H0v8.066z"></path></svg>
-                                    <span>Descarcari</span>
-                                </td>
-                                <td>Folder</td>
-                                <td>1.43 GB</td>
-                                <td>23/2/2025, 11:34</td>
-                                <td>yes</td>
                             </tr>
                         </tbody>
                     </table>
