Rm the NOT operator used to design the 'logged view' before having registered users.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" href="/images/cloudkeep-icon.ico" />
     <title>CloudKeep</title>
 </head>
-    <% if (!locals.user) { %>
+    <% if (locals.user) { %>
         <body class="body-logged">
             <header class="header-logged">
                 <a href="/">
